# reddit-streaming

./: .gitignore  README.md  creds(ei).sh  main.py  pyproject.toml
reddit_streaming/: data_collection.py  data_consumer.py  data_processing.py  data_processing_reference.py  data_processing_sentiment.py  data_processing_tfidf.py  main.py  real_time_streamlit.py  reddit_streamlit.py  reference.ipynb  sentiment.ipynb  streamlit_main.py  streamlit_real_time_app.ipynb  tfidf.ipynb
reddit_streaming/data/json/: 1d7cpts_comments_batch_0.json  1d7cpts_comments_batch_1.json  1d7cpts_comments_batch_10.json  1d7cpts_comments_batch_11.json  1d7cpts_comments_batch_12.json  1d7cpts_comments_batch_13.json  1d7cpts_comments_batch_14.json  1d7cpts_comments_batch_15.json  1d7cpts_comments_batch_16.json  1d7cpts_comments_batch_17.json  1d7cpts_comments_batch_2.json  1d7cpts_comments_batch_3.json  1d7cpts_comments_batch_4.json  1d7cpts_comments_batch_5.json  1d7cpts_comments_batch_6.json  1d7cpts_comments_batch_7.json  1d7cpts_comments_batch_8.json  1d7cpts_comments_batch_9.json  1d7cpts_info.json
