[tool.poetry]
name = "reddit-streaming"
version = "0.1.0"
description = "A Reddit streaming data processing project for a hackathon"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "reddit_streaming"}]

[tool.poetry.dependencies]
python = "^3.8"
praw = "^7.0.0"
pyspark = "^3.1.1"
textblob = "^0.15.3"
matplotlib = "^3.3.4"
plotly = "^4.14.3"
sqlalchemy = "^1.3.23"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
